src/App.css
/* ... */
section .container .rulebookcontent h1 .highlight
{
  font-size: 150% !important;
  font-family: "Josefin Sans", sans-serif !important;
  text-transform: uppercase;
}
section .container .rulebookcontent h2 
{
  font-size: 2em;
  font-family: "Jost", sans-serif;
  color: var(--primary);
  text-align: left;
}
section .container .rulebookcontent p
{
  width: 100%;
  font-size: 1.1em !important;
  color: #fff;
  text-align: left;
  margin-top: -30px;
}
section .container .rulebookcontent p .highlights
{
  font-size: 150% !important;
  font-family: "Josefin Sans", sans-serif !important;
  text-transform: uppercase !important;
  text-align: center;
}
section .container .rulebookcontent p .subheading
{
  font-size: 120%;
  color: var(--primary);
}
section .container .rulebookcontent h3
{
  font-size: 1.5em;
  color: var(--primary);
  text-align: center;
}
section .container .rulebookcontent a
{
  display: flex;
  width: 300px;
  justify-content: center;
  align-items: center;
}
section .container .rulebookcontent a :hover
{
  transform: scale(1.1);
  color: var(--primary);
  background-color: #000;
  border: solid 2px var(--primary);
}
section .container .rulebookcontent a h4
{
  font-size: 1em;
  width: 100%;
  display: flex;
  justify-content: center;
  text-transform: uppercase;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 15px;
  padding-right: 15px;
  background-color: var(--primary);
  color: #000;
  margin-bottom: 0px;
  font-family: "Josefin Sans", sans-serif !important;
  border: solid 2px #000;
  transition: transform 0.7s ease-out;
}

/* Events */

body {
  margin-top: 20px;
  background: #eee;
}
.timeline {
  position: relative;
  padding: 10px;
  margin: 0 auto;
  overflow: hidden;
  color: #ffffff;
}

.timeline:after {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  margin-left: -1px;
  border-right: 2px dashed #c4d2e2;
  height: 100%;
  display: block;
}

.timeline-row {
  padding-left: 50%;
  position: relative;
  margin-bottom: 30px;
}

.timeline-row .timeline-time {
  position: absolute;
  right: 50%;
  top: 31px;
  text-align: right;
  margin-right: 20px;
  color: #fff;
  font-size: 1.5rem;
}

.timeline-row .timeline-time small {
  display: block;
  font-size: 0.8rem;
  color: #c5c5c5;
}

.timeline-row .timeline-content {
  position: relative;
  padding: 20px 30px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
}

.timeline-row .timeline-content:after {
  content: "";
  position: absolute;
  top: 20px;
  height: 3px;
  width: 40px;
}

.timeline-row .timeline-content:before {
  content: "";
  position: absolute;
  top: 20px;
  right: -50px;
  width: 20px;
  height: 20px;
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
  border-radius: 100px;
  z-index: 100;
  background: #ffffff;
  border: 2px dashed #c4d2e2;
}

.timeline-row .timeline-content h4 {
  margin: 0 0 20px 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  line-height: 150%;
}

.timeline-row .timeline-content p {
  margin-bottom: 30px;
  line-height: 150%;
}

.timeline-row .timeline-content a {
  display: block;
  margin-top: 20px;
}

.timeline-row .timeline-content i {
  font-size: 2rem;
  color: #ffffff;
  line-height: 100%;
  padding: 10px;
  border: 2px solid #ffffff;
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
  border-radius: 100px;
  margin-bottom: 10px;
  display: inline-block;
}

.timeline-row .timeline-content .thumbs {
  margin-bottom: 20px;
}

.timeline-row .timeline-content .thumbs img {
  margin-bottom: 10px;
}

.timeline-row:nth-child(even) .timeline-content {
  background-color: #ff5000;
  /* Fallback Color */
  background-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    from(#fc6d4c),
    to(#ff5000)
  );
  /* Saf4+, Chrome */
  background-image: -webkit-linear-gradient(top, #fc6d4c, #ff5000);
  /* Chrome 10+, Saf5.1+, iOS 5+ */
  background-image: -moz-linear-gradient(top, #fc6d4c, #ff5000);
  /* FF3.6 */
  background-image: -ms-linear-gradient(top, #fc6d4c, #ff5000);
  /* IE10 */
  background-image: -o-linear-gradient(top, #fc6d4c, #ff5000);
  /* Opera 11.10+ */
  background-image: linear-gradient(top, #fc6d4c, #ff5000);
  margin-left: 40px;
  text-align: left;
}

.timeline-row:nth-child(even) .timeline-content:after {
  left: -63px;
  border-right: 18px solid #ff5000;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
}

.timeline-row:nth-child(even) .timeline-content:before {
  left: -50px;
  right: initial;
}

.timeline-row:nth-child(odd) {
  padding-left: 0;
  padding-right: 50%;
}

.timeline-row:nth-child(odd) .timeline-time {
  right: auto;
  left: 50%;
  text-align: left;
  margin-right: 0;
  margin-left: 20px;
}

.timeline-row:nth-child(odd) .timeline-content {
  background-color: #5a99ee;
  /* Fallback Color */
  background-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    from(#1379bb),
    to(#5a99ee)
  );
  /* Saf4+, Chrome */
  background-image: -webkit-linear-gradient(top, #1379bb, #5a99ee);
  /* Chrome 10+, Saf5.1+, iOS 5+ */
  background-image: -moz-linear-gradient(top, #1379bb, #5a99ee);
  /* FF3.6 */
  background-image: -ms-linear-gradient(top, #1379bb, #5a99ee);
  /* IE10 */
  background-image: -o-linear-gradient(top, #1379bb, #5a99ee);
  /* Opera 11.10+ */
  background-image: linear-gradient(top, #1379bb, #5a99ee);
  margin-right: 40px;
  margin-left: 0;
  text-align: right;
}

.timeline-row:nth-child(odd) .timeline-content:after {
  right: -63px;
  border-left: 18px solid #1379bb;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
}
/* ... */

